--- a/html/css/main.css
+++ b/html/css/main.css
@@ -946,3 +946,30 @@ br.nl
 #side-menu ul .enbl-sb-open {
 	display: block;
 }
+@media all and (min-width:300px) and (max-width: 640px) {
+	#side-menu {
+		display: none !important;
+	}
+	#products .block-category {
+		width: 100% !important;
+	}
+}
+.outer-product-info {
+	position: relative;
+}
+.product-information {
+	position: absolute;
+	bottom: 25px;
+	border: none;
+	border-bottom: 2px solid #000;
+	width: 100%;
+}
+.product-information div {
+	padding: 4px 0 40px 0;
+}
+.product-information div span {
+	display: inline-block;
+}
+.product-information div ul {
+	display: inline-block;
+}
