--- a/html/css/main.css
+++ b/html/css/main.css
@@ -924,6 +924,9 @@ br.nl
 .partner-name .partner-lnk a {
 	color: #999;
 }
+.partner-name .partner-lnk a span {
+	text-transform: capitalize;
+}
 .partner-name .partner-lnk a:hover {
 	color: #999;
 }
