--- a/html/css/main.css
+++ b/html/css/main.css
@@ -20,7 +20,7 @@ div#search-dlg {
 }
 
 div#search-dlg > span {
-/*    vertical-align: 100%;*/
+    vertical-align: 100%;
 }
 
 div#search-dlg div#search-box {
@@ -28,12 +28,16 @@ div#search-dlg div#search-box {
     display: inline-block;
     position: relative;
 }
+.main-search-box {
+    display: inline-block;
+    padding-bottom: 30px;
+}
 
 input#search-text {
     height: 100%;
     width: 600px;
     color: #000;
-    font-size: 30px;
+    font-size: 80px;
     font-weight: bold;
     border: none;
     border-radius: 0;
