--- a/html/js/EasyAutocomplete-1.3.5/easy-autocomplete.css
+++ b/html/js/EasyAutocomplete-1.3.5/easy-autocomplete.css
@@ -257,6 +257,7 @@
   padding-left: 0;
   position: relative;
   top: -1px;
+  text-align: left;
 }
 .easy-autocomplete-container ul li, .easy-autocomplete-container ul .eac-category {
   background: inherit;
@@ -267,7 +268,7 @@
   display: block;
   font-size: 14px;
   font-weight: normal;
-  padding: 4px 12px;
+  padding: 5px 12px;
 }
 .easy-autocomplete-container ul li:last-child {
   border-radius: 0 0 2px 2px;
@@ -289,9 +290,8 @@
   font-weight: bold;
 }
 .easy-autocomplete-container ul .eac-category {
-  font-color: #aaa;
-  font-style: italic;
-  background-color: #ccc;
+  font-color: #000;
+  font-weight: 700;
 }
 
 .eac-description .eac-item span {
