--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1010,8 +1010,8 @@ br.nl
 	position: relative;
 }
 .product-information {
-	position: absolute;
-	bottom: 25px;
+	margin-top: 25px;
+    bottom: 25px;
 	border: none;
 	border-bottom: 2px solid #000;
 	width: 100%;
