--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1031,3 +1031,24 @@ br.nl
 		bottom: -25px !important;
 	}
 }
+
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1030;
+    display: none;
+    background: rgba( 255, 255, 255, .8 ) url(../images/ajax.gif) 50% 50% no-repeat;
+    padding-left: 43%;
+    padding-top: 20%;
+}
+
+body.loading {
+    overflow: hidden;   
+}
+
+body.loading .loader {
+    display: block;
+}
