--- a/html/css/main.css
+++ b/html/css/main.css
@@ -55,6 +55,7 @@ div#search-dlg div#search-box {
 .show-more-results-btn-cnt {
     text-align: center;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 input#search-text {
