--- a/html/css/main.css
+++ b/html/css/main.css
@@ -176,6 +176,7 @@ input#search-text{width:100%;font-size:18px;}
 .uk-navbar.uk-active{background:#000 !important;}
 .padding-top-30{padding-top:0 !important;}
 .padding-left-0{padding-left:20px !important;}
+.eu-notif{margin-top: 7%;}
 }
 #dropdown-nav{top:410px;}
 .margin-top-30-m{margin-top:-30px;}
@@ -203,8 +204,19 @@ input#search-text{width:100%;font-size:18px;}
 .uk-breadcrumb > li:last-child::after{content:"";}
 #side-menu ul .non-enbl-sb-open{display:none;}
 #side-menu ul .enbl-sb-open{display:block;}
-@media all and (min-width:300px) and (max-width:640px){#side-menu{display:none !important;}
+.thumbnail-description{margin-left: 90px !important;}
+.product-breadcrumb{margin-top:-60px;}
+.product-description-all{margin-top: -20px;}
+@media all and (min-width:300px) and (max-width:769px){.side-menu{display:none !important;}
 #products .block-category{width:100% !important;}
+.sort-block{display: none;}
+.pagination-block{margin-bottom: 20px;}
+.thumbnail-description{margin-left: 40px !important;}
+.product-breadcrumb{display: none;}
+.product-description-all{margin-top: 0;}
+.product-title{width:100%;text-align:center;margin-bottom: 10px;}
+.product-description-all .price{width:100%;text-align:center;margin-bottom: 20px;}
+.product-desc-blck{text-align:center;}
 }
 .outer-product-info{position:relative;}
 .product-information{margin-top:25px;bottom:25px;border:none;border-bottom:2px solid #000;width:100%;}
@@ -385,3 +397,40 @@ body.loading .loader{display:block;}
 .scrollbar-chrome > .scroll-element.scroll-y.scroll-scrollx_visible .scroll-element_size{top:-19px;}
 .scrollbar-chrome > .scroll-element.scroll-x.scroll-scrolly_visible .scroll-element_track{left:-19px;}
 .scrollbar-chrome > .scroll-element.scroll-y.scroll-scrollx_visible .scroll-element_track{top:-19px;}
+.mbl-nav-cnt{background-color:#000;height: 50px;position:fixed;width:100%;top: 0;z-index:900;}
+.mbl-nav{position: fixed;top:0;left:0;background-color:#000;width:100%;height:100%;z-index:899;overflow-y:scroll;}
+.mbl-nav > ul > li, .mbl-nav > a{color:#fff;}
+.mbl-nav-lnk{color:#fff;margin-left:20px;font-size:20px;width:18px;display:inline-block;height:50px;}
+.mbl-nav-lnk:hover{color:#fff;text-decoration:none;}
+.mbl-nav-lnk::after{content:"\f0c9";font-family:FontAwesome;}
+.mbl-nav-lnk::before{content:"";vertical-align: middle;height:100%;display:inline-block;}
+.mbl-nav-logo{display:inline-block;width:calc(50% - 6px);position:relative;top:7px;}
+.mbl-nav-logo.idx-logo{width:calc(50% + 26px);}
+.mbl-nav-logo > a{float:right;}
+.mbl-nav-right{float:right;height:50px;padding-right:20px;padding-top:11px;}
+.mbl-nav-right > a{color:#fff;}
+.mbl-nav-right > #login_mobile::after{content:"\f007";font-family:FontAwesome;font-size:20px;padding-right:10px;}
+#currency-selector-mbl > a{color:#fff;}
+.mbl-nav-cnt .search-icon::after{content:"\f002";font-family:FontAwesome;font-size:19px;color:#fff;padding-left: 10px;}
+.mbl-nav > ul{padding: 4px 20px 20px;list-style:none;margin-top:50px;height:calc(100% - 120px);overflow-y:auto;}
+.mbl-nav > ul > li{display:list-item;text-transform:uppercase;}
+.mbl-nav a{color:#fff;width:100%;padding:15px 0;display:block;font-size:14px;}
+.mbl-nav a:hover{text-decoration:none;}
+.mbl-nav .close-menu-lnk{height:55px;text-transform: uppercase;font-size: 16px;font-weight: 700;text-align:center;border-top: 1px solid #fff;}
+.mbl-nav a.level-entry::after{content:"\f101";font-family:FontAwesome;float:right;}
+.mbl-nav a.level-back{text-transform:capitalize;}
+.mbl-nav a.level-back::before{content:"\f100";font-family:FontAwesome;padding-right:15px;}
+#search-text-design, #search-text-design-sale, #search-text-design-filter{border:1px solid #fff;color:#fff;background:transparent;width:100%;font-size:18px;font-weight:bold;border-radius:0;box-shadow: none;outline: none;margin-bottom: 10px;height: 100%;}
+.easy-autocomplete-container a{color:#000;}
+.tools-block-lnk{width: 100%;display: block;height: 35px;text-align: center;border: 1px solid #000;text-transform: uppercase;padding-top:7px;}
+.tools-block-lnk:hover{text-decoration: none;}
+.mbl-tools{position: fixed;width:100%;height: 100%;z-index: 899;background-color: #000;color:#fff;margin-top: 50px;}
+.mbl-tools .mbl-tools-inner{height:calc(100% - 105px);overflow-y:auto;padding: 4px 20px 20px;}
+.mbl-tools .close-tools-lnk{color:#fff;height: 55px;text-transform: uppercase;font-size: 16px;font-weight: 700;text-align: center;border-top: 1px solid #fff;padding: 15px 0;display: block;width: 100%;}
+.mbl-tools .close-tools-lnk:hover{text-decoration: none;}
+.mbl-tools-inner > span{text-transform: uppercase;font-size: 16px;padding-top: 20px;display: block;padding-bottom:20px;}
+.mbl-tools-inner > ul{padding: 4px 20px 20px;list-style:none;}
+.mbl-tools-inner > ul > li{display:list-item;}
+.mbl-tools-inner > ul > li > a{color:#fff;width: 100%;padding: 15px 0;display: block;font-size: 14px;}
+.mbl-tools-inner > ul > li > a:hover{text-decoration: none;}
+.side-menu-mbl ul li a.tools-lnk{color:#fff;display:block;padding:5px 0;}
