--- a/html/css/main.css
+++ b/html/css/main.css
@@ -226,7 +226,9 @@ input#search-text{width:100%;font-size:18px;}
 .product-information div{padding:4px 0 40px 0;}
 .product-information div span{display:inline-block;}
 .product-information div ul{display:inline-block;}
-@media (max-width:1200px){.product-information{position:relative !important;bottom:-25px !important;}
+@media (max-width:1200px){
+.product-information{position:relative !important;bottom:-25px !important;}
+.srch-results-cnt{width:100% !important;}
 }
 .loader{position:fixed;top:0;left:0;width:100%;height:100%;z-index:1030;display:none;background:rgba(255, 255, 255, .8) url(../images/ajax.gif) 50% 50% no-repeat;padding-left:43%;padding-top:20%;}
 body.loading{overflow:hidden;}
@@ -438,3 +440,4 @@ body.loading .loader{display:block;}
 .mbl-tools-inner > ul > li > a{color:#fff;width: 100%;padding: 15px 0;display: block;font-size: 14px;}
 .mbl-tools-inner > ul > li > a:hover{text-decoration: none;}
 .side-menu-mbl ul li a.tools-lnk{color:#fff;display:block;padding:5px 0;}
+.srch-results-cnt{display: inline-block; vertical-align: top; width: 80%; float: right;}
